--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ultramen/app",
+    "name": "likefeederdikti",
     "require": {
         "twig/twig": "^1.20",
         "twig/extensions": "^1.2",
